--- a/css/custom.css
+++ b/css/custom.css
@@ -1,1 +1,2 @@
 /* You can customize theme styles here */
+.btn-red{background-color:#e93e34!important;border-color:#e93e34!important}.btn-red:hover{background-color:white !important; color: #e93e34}
