--- a/css/rad-icons.css
+++ b/css/rad-icons.css
@@ -24,7 +24,7 @@
   font-family: "rad-icons";
   font-style: normal;
   font-weight: normal;
-  speak: none;
+  /* speak: none; */
  
   display: inline-block;
   text-decoration: inherit;
@@ -52,7 +52,7 @@
   -moz-osx-font-smoothing: grayscale;
  
   /* Uncomment for 3D effect */
-  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
+  text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3);
 }
  
 .icon-arrow-right:before { content: '\e800'; } /* '' */
