--- a/themes/raditian-free-hugo-theme/static/css/custom.css
+++ b/themes/raditian-free-hugo-theme/static/css/custom.css
@@ -1,2 +1,2 @@
 /* You can customize theme styles here */
-.btn-red{background-color:#e93e34!important;border-color:#e93e34!important}.btn-red:hover{background-color:white !important; color: #e93e34}
+.btn-red{background-color:#e93e34!important;border-color:#e93e34!important}.btn-red:hover{background-color:white !important; color: #e93e34}img.image-left-overflow{clip-path: polygon(100% 0, 86% 100%, 0% 100%, 0 0%)!important}
