--- a/themes/raditian-free-hugo-theme/layouts/partials/about.html
+++ b/themes/raditian-free-hugo-theme/layouts/partials/about.html
@@ -9,6 +9,7 @@
           data-src="{{ .Site.Data.homepage.about.image.x | absURL }}"
           data-srcset="{{ .Site.Data.homepage.about.image.x | absURL }} 1x, {{ .Site.Data.homepage.about.image._2x | absURL }} 2x"
           alt="Profile Picture"
+          style="clip-path: polygon(100% 0, 86% 100%, 0% 100%, 0 0%);"
         />
       </div>
       <div class="col-12 col-md-6 my-auto my-auto">
