--- a/themes/raditian-free-hugo-theme/layouts/partials/client-and-work.html
+++ b/themes/raditian-free-hugo-theme/layouts/partials/client-and-work.html
@@ -61,10 +61,10 @@
         <p class="lead">
           {{ .description | markdownify }}
         </p>
-        <iframe frameborder="0" src="https://itch.io/embed/1610145" width="552" height="167"><a href="https://joshpinto6.itch.io/oliver-the-dice-master">Oliver the Dice Master by joshpinto6</a></iframe>
+        <iframe frameborder="0" src="https://itch.io/embed/1610145" width="460" height="167"><a href="https://joshpinto6.itch.io/oliver-the-dice-master">Oliver the Dice Master by joshpinto6</a></iframe>
         <a href="{{ .button.URL | absURL }}" class="btn btn-primary"
-          >{{ .button.btnText }}<i class="{{ .button.icon }}"></i
-        ></a>
+          ><i class="{{ .button.icon }}"></i
+            >{{ .button.btnText }}</a>
       </div>
       {{ end }}
     </div>
