--- a/themes/raditian-free-hugo-theme/layouts/partials/contact.html
+++ b/themes/raditian-free-hugo-theme/layouts/partials/contact.html
@@ -26,20 +26,15 @@
                             <div class="col-12">
                                 <button type="submit" class="btn btn-primary">
                                     <i class="{{ .Site.Data.homepage.contact.button.icon }}"></i>
-                                    {{ .Site.Data.homepage.contact.button.btnText }}
+                                    {{ .Site.Data.homepage.contact.button.btnText }}*
                                 </button>
+                                <br></br>
+                                <p>*Powered by Google Forms</p>
                             </div>
                         </div>
                     </form>
                 </div>
-                <div class="col-12 col-lg-5 contact__info">
-                    <h4>{{ .Site.Data.homepage.contact.phone.title }}</h4>
-                    <span>{{ .Site.Data.homepage.contact.phone.number }}</span>
-                    <h4>{{ .Site.Data.homepage.contact.email.title }}</h4>
-                    <span>{{ .Site.Data.homepage.contact.email.email | safeHTML }}</span>
-                    <h4>{{ .Site.Data.homepage.contact.address.title }}</h4>
-                    <span>{{ .Site.Data.homepage.contact.address.address | safeHTML }}</span>
-                </div>
+
             </div>
         </div>
     </div>
