--- a/themes/raditian-free-hugo-theme/layouts/partials/footer.html
+++ b/themes/raditian-free-hugo-theme/layouts/partials/footer.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="footer__left">
       <div class="footer__copy">
-        {{ .Site.Params.footer.copyright }}
+        {{ .Site.Params.footer.copyright | markdownify}}
       </div>
     </div>
     <div class="footer__links">
