Update footer links

--- a/themes/raditian-free-hugo-theme/layouts/partials/footer.html
+++ b/themes/raditian-free-hugo-theme/layouts/partials/footer.html
@@ -1,3 +1,9 @@
+<style> 
+.footer__copy a {
+  color: white;
+  text-decoration: underline;
+}
+</style>
 <footer class="footer">
   <div class="container">
     <div class="footer__left">
