--- a/themes/raditian-free-hugo-theme/layouts/partials/client-and-work.html
+++ b/themes/raditian-free-hugo-theme/layouts/partials/client-and-work.html
@@ -24,6 +24,8 @@
       </div>
     </div>
     {{ range $index, $element := .Site.Data.homepage.client_and_work.works }}
+    {{ if not .isSub }}
+
     <div
       class="row row--padded rad-animation-group rad-fade-down {{ if .is_even }}flex-column-reverse flex-md-row{{ end }}"
     >
@@ -70,6 +72,31 @@
       {{ end }}
     </div>
     {{ end }}
+    {{ if .isSub }}
+    <div style="
+    padding-left: 32px;
+">
+        
+    <div class="row row--padded rad-animation-group rad-fade-down rad-waiting rad-animate" style="animation-delay: 0.1s;border-left-width: 6px;border-left-style: solid;padding-left: 48px;padding-top: 32px;padding-bottom: 32px;border-left-color: #c4c4c4;">
+      
+      <div class="col-12 col-md-5 mt-4 mt-md-0 my-md-auto">
+        <p style="margin-bottom: 4px !important;">{{ .date }}</p>
+        <h3>{{ .title }}</h3>
+        <p class="lead">
+          {{ .description | markdownify }}
+        </p>
+        <a href="{{ .button.URL | absURL }}" class="btn btn-primary"><i class="{{ .button.icon }}"></i>{{ .button.btnText }}</a>
+        <a href="{{ .button2.URL | absURL }}" class="btn btn-primary btn-red"><i class="{{ .button2.icon }}"></i>{{ .button2.btnText }}</a>
+      </div><div class="col-12 col-md-7 pl-md-0 text-right">
+        <img class="lozad img-responsive img-clip-right-backward" src="https://joshpinto6.github.io/GodotMage/site/img/works/swissfintech.jpg" data-src="https://joshpinto6.github.io/GodotMage/site/img/works/swissfintech.jpg" data-srcset="https://joshpinto6.github.io/GodotMage/site/img/works/swissfintech.jpg 1x, https://joshpinto6.github.io/GodotMage/site/img/works/swissfintech@2x.jpg 2x" alt="Swiss Fintech Website" srcset="https://joshpinto6.github.io/img/works/oliver-the-dicemaster.png" data-loaded="true">
+      </div>
+      
+      
+    </div>
+    {{ end }}
+    {{ end }}
+  </div>
+
   </div>
 </section>
 {{ end }}
